--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
     {{ content }}
   </div>
   
-  {% include analytics.html %}
+  {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+    {% endif %}
 </body>
 </html>
